--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Gifts } from '../components/Gifts';
+import { gifts } from '../data/gifts';
 ---
 
 <html lang="en">
@@ -7,6 +8,7 @@ import { Gifts } from '../components/Gifts';
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>It’s your flippin’ birthday!</title>
+		{gifts.map(({ img }) => <link rel="preload" as="image" href={img} />)}
 	</head>
 	<body class="bg-slate-900 flex flex-col gap-12 min-h-screen py-12">
 		<h1 class="text-center text-white font-bold text-6xl">Happy birthday, Kelly!</h1>
